--- a/module/Application/test/TestConfig.php.dist
+++ b/module/Application/test/TestConfig.php.dist
@@ -2,15 +2,14 @@
 return array(
     'modules' => array(
         'Application',
-    	'Album',	
     ),
     'module_listener_options' => array(
         'config_glob_paths'    => array(
-            'config/autoload/{,*.}{global,local}.php',
+            '../../../config/autoload/{,*.}{global,local}.php',
         ),
         'module_paths' => array(
-            './module',
-            './vendor',
+            'module',
+            'vendor',
         ),
     ),
 );
